included rest of Chuck's comments on WCVI CK

--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -524,6 +524,8 @@ When we scaled correlations in recruitment residuals to less than observed spawn
 
 For the base case, we assumed that age proportions of recruitment varied over time and among inlets parameterized from age proportions of recruits calculated for each CU in the WCVI Chinook run reconstruction (D. Dobson pers. comm. DFO Science; inlet-specific age-proportions were not available) (Figure \@ref(fig:chinook-agePpns)). We used the CU-specific mean proportions at each age from the run reconstruction with annual deviations in those proportions based on a multivariate logistic distribution, parameterized from the estimated time-series of age proportions.
 
+For these analyses, recruitment was calculated from total spawner abundances (i.e., combined natural- and hatchery-origin spawners) and catches, which may result in biased proportions for hatchery-influenced populations if hatchery-origin adults return at different (younger) ages than natural-origin salmon [@larsenMaintainingWildPhenotype2019].  As mentioned above, the inclusion of hatchery-origin fish in estimates of status is a key source of uncertainty for this SMU.
+
 
 ```{r chinook-agePpns, echo=FALSE, fig.cap="Time-series of proportions at age in recruitment aligned by brood year, calculated from run reconstruction for WCVI Chinook by CU.", out.width = '60%'}
 cuAges <- read.csv("data/WCVICUages.csv")
@@ -588,7 +590,7 @@ knitr::include_graphics("figure/chinook-cvER-ProjLRPCurve-ALLp.png")
 
 
 
-We further considered sensitivity analyses on average exploitation rates from 5-45% (Figure \@ref(fig:chinook-projLRPER)), where 30% exploitation was the base case. As exploitation increased, the LRP associated with a specified probability of all inlets being above their lower benchmark also increased. At high exploitation, the depletion of any given inlet was more frequent despite often relatively high aggregate abundances on the remaining inlets.   
+We further considered sensitivity analyses on average exploitation rates from 5-45% (Figure \@ref(fig:chinook-projLRPER)), where 30% exploitation was the base case. As exploitation increased, the LRP associated with a specified probability of all inlets being above their lower benchmark also increased. At high exploitation, individual inlets dropped below their lower benchmarks more frequently despite often relatively high aggregate abundances on the remaining inlets.   
 
 
 ```{r chinook-projLRPER, echo=FALSE, warning=FALSE, fig.cap="Probability of all inlets being above their lower benchmark along a gradient in aggregate abundances within bins of 200 fish, derived from projections over 30 years and 50,000 MC Trials, under a range of average exploitation rates from 5-45\\%. Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue) are highlighted."}
@@ -609,7 +611,7 @@ Given uncertainty in current and anticipated productivity, projection-based LRPs
 
 Projection-based LRPs tended to increase under low productivity and vice versa (Figure \@ref(fig:chinook-projLRPsAlpha)), a trend that was expected due to the inverse relationship between productivity and inlet-specific S~gen~ values [@holtCautionsUsingPercentilebased2015]. At low productivity, S~gen~ tends to increase, thereby becoming more precautionary.  The sensitivity of LRPs to productivity highlights the value of updating benchmarks and projection-based LRPs as productivity changes. Our results also show that uncertainty in projections increased under low productivity, likely requiring more random Monte Carlo trials for stabilization at p=0.5, i.e., 50% probability of CUs being above their lower benchmarks. The probability of all inlets being above their lower benchmark rarely met or exceeded 0.66 ['likely' category, @mastrandreaGuidanceNoteLead2010] when productivity was low, so LRPs at this level could not be estimated. When productivity was high, the probability of all inlets being above their lower benchmark rarely dropped below 0.66. At high productivity, LRPs at the p=0.5 level could not be estimated. More detailed analyses of LRPs along the entire range of productivities and exploitation was beyond the scope of this case study.
    
-<!--CH: add Mike Staley's concern about depensaion. to what extent can this SA on low produciivty inform Q about depensation?  Mention, "all models are wrong but some are useful", or reword this-->
+<!--CH: add Mike Staley's concern about depensation. to what extent can this SA on low produciivty inform Q about depensation?  Mention, "all models are wrong but some are useful", or reword this-->
 
 ```{r chinook-projLRPsAlpha, echo=FALSE, fig.cap="Projection-based LRPs estimated under assumptions of reduced productivity (0.75x of current levels) and increased productivity (1.5x current levels).  Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue) are highlighted. More Monte Carlo trials are required for stabilization of LRPs at low productivity. LRPs at p=0.66 could not be estimated at low productivity, and LRPs at p=0.5 could not be estimated at high productivity", out.width = '80%'}
 
@@ -638,11 +640,11 @@ knitr::include_graphics("figure/chinook-statusPlot-withBars2020.png")
 
 A few key conclusions from this case study are highlighted for broader relevance. Status was consistent across the LRP methods that were available, and with a previously published assessment. This SMU is generally managed at scales smaller than the SMU supporting the application of proportion-based LRPs to allow management decisions to be responsive to CU- or inlet-level statuses. However, aggregate abundance-based LRPs were also estimated here for demonstration purposes. It was not possible to estimate a logistic regression-based LRP due to lack of contrast in the time-series, so we focused our analyses on projection-based LRPs.
 
-Projection-based LRPs were highly sensitivity to average exploitation for this SMU. LRPs derived assuming current exploitation rates cannot be used as an indicator of serious harm if the management procedure changes. Projection-based LRPs were also highly sensitive to underlying population productivities. As productivity declined, LRPs increased, becoming more precautionary, reflecting trends of underlying benchmarks. Projection-based LRPs at probabilities levels of 90% and 99% could not be estimated for this SMU because of the relatively low covariation in population dynamics among CUs. The probability of all CUs being above their lower benchmarks were never high, even at high aggregate abundances. 
+Projection-based LRPs were highly sensitivity to average exploitation for this SMU. LRPs derived assuming current exploitation rates cannot be used as an indicator of serious harm if the management procedure changes. Projection-based LRPs were also highly sensitive to underlying population productivities. As productivity declined, LRPs increased, becoming more precautionary, reflecting trends of underlying benchmarks. Projection-based LRPs at probabilities levels of 90% and 99% could not be estimated for this SMU because of the relatively low covariation in population dynamics among CUs. The probability of all CUs exceeding their lower benchmarks was never high, even at high aggregate abundances. 
 
 In the development of projection-based LRPs, inlets were chosen as the spatial scale of biodiversity required for the sustainability for the SMU. In future analyses, alternative assumptions could be considered, including LRPs derived to maintain diversity at the CU scale by projecting CU-level abundances.  In addition, future iterations of the multidimensional status assessments used within the Pacific Salmon Status Scanner could include information on the distribution of spawners across inlets within CUs to incorporate this finer scale of biodiversity.  The projection-based LRPs developed here are for demonstration purposes only. Further evaluation of the influence of hatcheries on spawner abundances and model assumptions, including the form of the stock-recruitment relationship, would be required prior to providing aggregate abundance-based LRPs for this SMU. 
 
-A key uncertainty for this SMU is the contribution of hatcheries to total abundances. Although only indicator stocks where most of the production was from natural spawning were included, hatchery enhancement likely biases abundances<!--abundance?--> estimates positively, providing an optimistic characterization of status compared to if the hatchery contribution were removed. Time-series of hatchery-origin spawners were not available for most of the stocks we considered, precluding the ability to account for enhancement quantitatively in abundance estimates.
+A key uncertainty for this SMU is the contribution of hatcheries to total abundances. Although only indicator stocks where most of the production was from natural spawning were included, hatchery enhancement likely biases abundance estimates upwards, providing an optimistic characterization of status compared to if the hatchery contribution were removed. Furthermore, hatchery production can result in optimistic estimates of recruitment and productivity, resulting in LRPs that are biased low. Time-series of hatchery-origin spawners were not available for most of the stocks we considered, precluding the ability to account for enhancement quantitatively in abundance estimates.
 
 
 <!--CH:  Although time-series of pHOS don't exist for most stocks, we could actually remove ppn hatchery based on a recent estimate from 6 of 11 indicator stocks for abundances to compare against habitat based benchmarks. However, the most recent data I received from Jessy Jan 2021, had PNI estimates that ended in 2017 or 2018, so actually not very current. Also, because we can't remove it for all of them our aggregate abundances would be based on totals, so perhaps a disconnect between CU level status and aggregate-abundances if used to logistic regression. Also, status already below LRP, so reducing abundances wouldn't change management decision on this Q. 
