--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -564,6 +564,24 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\3TLL7HLD\\Kristensen et al. - 2016 - TMB  Automatic Differentiation and Laplace.pdf}
 }
 
+@article{larsenMaintainingWildPhenotype2019,
+  title = {Maintaining a Wild Phenotype in a Conservation Hatchery Program for {{Chinook}} Salmon: {{The}} Effect of Managed Breeding on Early Male Maturation},
+  shorttitle = {Maintaining a Wild Phenotype in a Conservation Hatchery Program for {{Chinook}} Salmon},
+  author = {Larsen, Donald A. and Harstad, Deborah L. and Fuhrman, Abby E. and Knudsen, Curtis M. and Schroder, Steven L. and Bosch, William J. and Galbreath, Peter F. and Fast, David E. and Beckman, Brian R.},
+  editor = {Planas, Josep V.},
+  year = {2019},
+  month = may,
+  journal = {PLOS ONE},
+  volume = {14},
+  number = {5},
+  pages = {e0216168},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0216168},
+  abstract = {In many salmonid species, age and size at maturation is plastic and influenced by the interaction between genetic and environmental factors. Hatchery reared salmon often mature at an earlier age and smaller size than wild fish. Modern salmon conservation efforts have focused on managing the level of gene flow between hatchery and natural origin fish to minimize potential genotypic and phenotypic change. In salmonids, maturation probability is dependent on exceeding a genetically set threshold in growth rate and energetic status (and by association, body size) referred to as the probabalisitic maturation reaction norm (PMRN). Over fourteen years, we monitored the frequency of age-2 precocious male maturation (common term: age-2 minijack rate) and the PMRN of natural founder (FNDR), integrated naturalhatchery (INT), and segregated hatchery (SEG) broodlines of spring Chinook salmon, Oncorhynchus tshawytscha. The average age-2 minijack rate ({$\pm$} SEM) of the FNDR, INT and SEG broodlines was 48.2 {$\pm$} 5.2\%, 41.9 {$\pm$} 3.6\% and 30.9 {$\pm$} 4.7\%, respectively. Additionally, the PMRN WP50 (predicted weight at 50\% maturation) of the SEG broodline was significantly greater (20.5 g) than that of the FNDR/INT broodlines (18.2 g). We also conducted a common garden experiment exploring the effects of less than one [INT (0\textendash 1)], one [SEG (1)] or two [SEG (2)] generations of hatchery culture on the age-2 minijack rate and PMRN WP50. Growth was not significantly different among broodlines, but age-2 minijack rates were significantly lower following two consecutive generations of hatchery culture: [INT (0\textendash 1): 68.3 {$\pm$} 1.7\%], [SEG (1): 70.3 {$\pm$} 1.8\%] and [SEG (2): 58.6 {$\pm$} 0.4\%] and the PMRN WP50 was significantly higher by 6.1 g after two generations of SEG culture. These results indicate that managed gene flow reduces phenotypic divergence, but may serve to maintain potentially undesirably high age-2 minijack rates in salmon conservation hatchery programs.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\EB8UDVS7\\Larsen et al. - 2019 - Maintaining a wild phenotype in a conservation hat.pdf}
+}
+
 @article{leeDiverseKnowledgeSystems2019,
   title = {Diverse Knowledge Systems Reveal Social\textendash Ecological Dynamics That Inform Species Conservation Status},
   author = {Lee, Lynn Chi and Thorley, Joe and Watson, Jane and Reid, Mike and Salomon, Anne Katherine},
