--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -28,7 +28,9 @@ Holt et al. (in review) provide steps for applying LRPs to salmon SMUs, one of w
 Upper Knight and Bute Inlet CUs are both associated with long fjords that run from the Broughton Archipelago through the Coast Mountains. They include rivers with headwaters in the Cariboo region farther inland than other CUs in the SMU (Figure \@ref(fig:chum-map)). Southern Coastal Streams, Georgia Strait, and Howe Sound-Burrard Inlet also include portions of the Coast Mountains and some glaciers, but to a lesser extent and their inlets are shorter and their watersheds do not go as far inland. Upper Knight and Bute Inlet are unique in that they are the only CUs in the SMU that only include watersheds that drain into the upper end of long inlets. They are both more remote than the other CUs, which is partly why there are fewer observations over time for Chum with fall run timing.
 
 <!-- SG: Paragraph should be cut into separate ones, too long for a reader.-->
-Chum from the Upper Knight and Bute Inlet CUs are exposed to different threats to habitat, survival and productivity than the other five CUs in both the fresh water and the early marine phase. While these two CUs have, on average, lower impacts from forest harvest, impervious area, and roads, they have larger impacts from forest defoliation and pests [@pacificsalmonfoundationPacificSalmonExplorer2021]. They may also have different levels of risk from disturbances such as glacier melt, avalanches, debris flows, and floods because they have large melting glaciers associated with lakes, steep slopes, and unstable terrain. In the Bute Inlet CU, the glacial lake outburst flood that caused a debris flow in the Southgate River in November 2020 is one example of such an event<!--CH: I was curious and had to look that one up; interesteing!-->. These events are capable of killing an entire brood year of eggs/alevins and reshaping habitat with impacts on spawning habitat and stream ecosystems for many years. They can also change water quality in near shore marine habitats. These catastrophic events may be less likely in watersheds with gentler topography and that lack glaciers and glacial lakes. The hydrology of these two CUs likely differs from that of other CUs with more low-lying topography. These watersheds have large glaciers and high amounts of snowmelt, compared to more low-elevation coastal watersheds with more rain-dominant hydrographs. Marine conditions when smolts enter the ocean in these systems may vary from that of the other five CUs, as they are entering the upper ends of large fjords. Competition with other salmon in the ocean and ocean conditions affect chum salmon in this SMU [@debertinMarineGrowthPatterns2017, @litzCompetitionOddyearPink2021a], although declines in Pink salmon stocks in this general area may suggest that these factors are not affecting these CUs only. Regarding biological characteristics, Bute Inlet and Upper Knight have a higher proportion of summer-run populations of Chum (Table \@ref(tab:CU-summary)). Recruits per spawner of the Upper Knight and Bute Inlet CUs (estimated using CU-level infilling, which introduces error) are more variable than for other CUs in this SMU, exhibiting very productive years (>100 recruits per spawner) and years with very low productivity. These CUs also have lower habitat capacity, with fewer streams with fall timed Chum spawners than the other CUs (Table \@ref(tab:CU-summary)). Based on these differences, the burden of proof is not met, and we cannot infer the status for Bute Inlet and Upper Knight from the other CUs. Note that these criteria used to evaluate whether status can be borrowed for these CUs extends to whether reliable spawner escapement data can be infilled using escapement in the other CUs. Thus, these CUs are dropped for years with no spawner data in this case study. 
+Chum from the Upper Knight and Bute Inlet CUs are exposed to different threats to habitat, survival and productivity than the other five CUs in both the fresh water and the early marine phase. While these two CUs have, on average, lower impacts from forest harvest, impervious area, and roads, they have larger impacts from forest defoliation and pests [@pacificsalmonfoundationPacificSalmonExplorer2021]. They may also have different levels of risk from disturbances such as glacier melt, avalanches, debris flows, and floods because they have large melting glaciers associated with lakes, steep slopes, and unstable terrain. In the Bute Inlet CU, the glacial lake outburst flood that caused a debris flow in the Southgate River in November 2020 is one example of such an event<!--CH: I was curious and had to look that one up; interesteing!-->. These events are capable of killing an entire brood year of eggs/alevins and reshaping habitat with impacts on spawning habitat and stream ecosystems for many years. They can also change water quality in near shore marine habitats. These catastrophic events may be less likely in watersheds with gentler topography and that lack glaciers and glacial lakes. 
+
+Environmental drivers, biological characteristics, and population capacity for Upper Knight and Bute Inlet CUs also differ from the other seven CUs. The hydrology of these two CUs likely differs from that of other CUs with more low-lying topography. The two largest watersheds in these CUs (Homathko and Klinaklini) fall within their own Freshwater Adaptize Zone, which indicates unique freshwater habitat conditions (Figure 76 and Table 52 in @holtbyConservationUnitsPacific2007). These watersheds have large glaciers and high amounts of snowmelt, compared to more low-elevation coastal watersheds with more rain-dominant hydrographs. Marine conditions when smolts enter the ocean in these systems may vary from that of the other five CUs, as they are entering the upper ends of large fjords. Competition with other salmon in the ocean and ocean conditions affect chum salmon in this SMU [@debertinMarineGrowthPatterns2017, @litzCompetitionOddyearPink2021a], although declines in Pink salmon stocks in this general area may suggest that these factors are not affecting these CUs only. Regarding biological characteristics, Bute Inlet and Upper Knight have a higher proportion of summer-run populations of Chum (Table \@ref(tab:CU-summary)). Recruits per spawner of the Upper Knight and Bute Inlet CUs (estimated using CU-level infilling, which introduces error) are more variable than for other CUs in this SMU, exhibiting very productive years (>100 recruits per spawner) and years with very low productivity. These CUs also have lower habitat capacity, with fewer streams with fall timed Chum spawners than the other CUs (Table \@ref(tab:CU-summary)). Based on these differences, the burden of proof is not met, and we cannot infer the status for Bute Inlet and Upper Knight from the other CUs. Note that these criteria used to evaluate whether status can be borrowed for these CUs extends to whether reliable spawner escapement data can be infilled using escapement in the other CUs. Thus, these CUs are dropped for years with no spawner data in this case study. 
 
 
 ```{r CU-summary, echo=FALSE}
@@ -66,10 +68,10 @@ We used the same data used in @holtEvaluatingBenchmarksBiological2018, but updat
 
 For this case study, we consider two approaches for characterizing CU status: 
 (1) Pacific Salmon Scanner Tool (or Salmon Scanner) and 
-(2) CU-level abundance relative to a percentile lower benchmark.
+(2) CU-level abundance relative to a percentile lower benchmark. <!--SG: This could also come from the scanner, if you have a BM, you put that into the tool and estimate this separately.-->
 
 
-The first approach, which uses the Salmon Scanner developed by the State of the Salmon program (Section \@ref(rapidToolMethods)) (Pestal et al. in prep.) is consistent with Canada's WSP and is recommended by Holt et al. (in review)<!--^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]--> as the method that should be used to estimate CU status when using the proportional LRP approach. The second approach is presented for comparison with the Salmon Scanner.
+The first approach, which uses the Salmon Scanner developed by the State of the Salmon program (Section \@ref(rapidToolMethods)) (Pestal et al. in prep.) is consistent with Canada's WSP and is recommended by Holt et al. (in review)<!--^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]--> as the method that should be used to estimate CU status when using the proportional LRP approach. The second approach is presented for comparison with the Salmon Scanner.<!--SG: Again, it isn’t really a separate approach.  The Scanner does both. You are just doing what we would recommend in an expert driven process. Look at the integrated status produced by the algorithm, and results for individual metrics, time series, etc. Our work has landed on the algorithm we have as the best way.-->
 
 
 When applying the Salmon Scanner to ISC Chum, we used percentile benchmarks as both upper and lower benchmarks when they were available for a CU. For CUs in which percentile benchmarks were not appropriate, the Salmon Scanner tool used trends in spawner abundance as a basis for assessing CU status (Figure \@ref(fig:decision-tree)).  As a result, both of our approaches to CU status estimation depend at least partially on percentile-based benchmarks.
@@ -112,7 +114,7 @@ The methods for applying the Salmon Scanner to get CU status is described in Sec
 We looked at the proportion of CUs that had status estimates above the red zone (or, above the lower percentile benchmark) to determine in which years between 1960 and 2018 the LRP would have been breached. As with the Interior Fraser Coho and WCVI Chinook case studies, we required all CUs to be above the red zone for the ISC Chum SMU to be classified as being above the LRP. 
 
 
-The single-metric approach to assessing CU status based on percentiles has specific data requirements [@holtEvaluatingBenchmarksBiological2018] while the Salmon Scanner approach can be applied to any CU with at least a consistent time-series of spawner abundances. To compare LRPs based on CU assessment from these two approaches we compared data subsets including those that used the same data for each method, and all appropriate data for each method. We evaluated six different combinations of data and LRP methods (Table \@ref(tab:LRP-scenarios)). 
+The single-metric approach to assessing CU status based on percentiles has specific data requirements [@holtEvaluatingBenchmarksBiological2018] while the Salmon Scanner approach can be applied to any CU with at least a consistent time-series of spawner abundances. <!--SG: Again, they are the same…Scanner can use percentiles as BM -->To compare LRPs based on CU assessment from these two approaches we compared data subsets including those that used the same data for each method, and all appropriate data for each method. We evaluated six different combinations of data and LRP methods (Table \@ref(tab:LRP-scenarios)). 
 
 
 When describing ISC Chum LRP scenarios in Table \@ref(tab:LRP-scenarios) and throughout this case study, we use the following labelling convention: *Metric : CU Status Method : Data Scenario*. 'Metric' refers to the choice to base all ISC Chum LRPs on the proportion of CUs above red CU status (Prop). The 'CU Status Method' can be based on the Pacific Salmon Status Scanner (Scanner) or on a single percentile benchmark used to characterize CU status (Percentile).  Finally, 'Data Scenario' labels indicate both the number of CUs represented (4, 5, or 7) and the completeness of the time series (Full or Partial). 'Full' scenarios only included CUs with complete time series (no CUs with missing years). 'Partial' scenarios included CUs with incomplete time series (years that did not have observations in those CUs were omitted). When using percentile benchmarks in these scenarios, we used percentiles based on @holtEvaluatingBenchmarksBiological2018. The benchmarks were estimated using the entire time series. 
@@ -186,7 +188,7 @@ We evaluated whether the proportion of CUs above their lower benchmark could be 
 Due to poor logistic model fits using the entire 1953-2018 time series, we did not conduct retrospective analyses of logistic regression-based LRPs for this SMU as was done for the Interior Fraser River Coho case study. The characteristics of the data that led to poor logistic model fits are highlighted in the results section below. 
 
 
-Projection-based LRPs are an alternative aggregate abundance LRP that we did not consider for this SMU due to lack of peer-reviewed stock-recruitment parameter estimates <!--CW replace: parameter estimates. LW: realized that Holt et al. 2018 did have parameter estimates for alpha in tables, and used those to recommend percentile benchmarks. Might want to replace 'peer-reviewed' with 'reliable'? --> for component CUs. However, this approach could be considered in future analyses given consensus on model structure and parameterization that provide realistic uncertainties in projections of population dynamics.
+Projection-based LRPs are an alternative aggregate abundance LRP that we did not consider for this SMU due to lack of peer-reviewed stock-recruitment parameter estimates<!--CW replace: parameter estimates. LW: realized that Holt et al. 2018 did have parameter estimates for alpha in tables, and used those to recommend percentile benchmarks. Might want to replace 'peer-reviewed' with 'reliable'? --> for component CUs. However, this approach could be considered in future analyses given consensus on model structure and parameterization that provide realistic uncertainties in projections of population dynamics.
 
 
 ### Results
@@ -283,7 +285,7 @@ This case study highlighted requirements and limitations of percentile benchmark
 Existing guidelines and cautions should be incorporated into any LRP analysis using percentile benchmarks. We followed guidelines from @holtEvaluatingBenchmarksBiological2018 and did not use percentile benchmarks for CUs with low productivity and high exploitation rate (Tables \@ref(tab:CU-summary), \@ref(tab:holt-tab6)). In their simulation study, percentile-based benchmarks overestimated status with harvest rates >40% and $\alpha$ <4, or harvest rates 20-40% and $\alpha$ <2.5. In these cases of low productivity and high harvest rates, more exploration could be done on alternative benchmarks. These could include benchmarks based on Traditional Ecological Knowledge, habitat availability, or other information. If productivity and/or harvest is unknown, low contrast in escapement time-series could be indicators of cases where percentile benchmarks may not be appropriate [@holtEvaluatingBenchmarksBiological2018]. We also note that cases with identical lower and upper benchmarks carry the risk of moving immediately from green to red status with time in the amber status zone (North East Vancouver Island, Upper Knight, Loughborough; Table \@ref(tab"CU-summary")). CUs with shorter time series also have the risk of unreliable percentile benchmarks. In the case where percentile benchmarks are used in the Salmon Scanner, if they are within the recommended guidelines, using them is preferred over relying solely on trends to assess CU status. Confidence intervals for percentile benchmarks can also be derived by bootstrapping escapement data, accounting for autocorrelation in time-series [@peacockEvaluatingConsequencesCommon2020; @holtEvaluatingBenchmarksBiological2018].
 
 
-@clarkEvaluationPercentileApproach2014 applied a similar percentile-based approach for Alaskan salmon stocks, where applicability of percentiles was categorized in into 3 tiers based on contrast in spawner abundances, harvest rate, and precision of escapement data. They tested the suitability of this tiered approach with theoretical, simulation, and meta-analysis methods using 76 stock-recruitment data sets from Alaska covering all 5 species fo Pacific salmon. The goal of these tiers was to choose a Sustainable Escapement Goal (SEG; an upper and lower percentile) as a proxy for keeping escapement within a range that includes S\textsubscript{MSY} [@clarkEvaluationPercentileApproach2014]. Moving to British Columbia, @hilbornBritishColumbiaChum2012a adopted the percentile-based thresholds for evaluating the status of Inside South Coast Chum in BC for the purpose of certification with the Marine Stewardship Council [@hilbornBritishColumbiaChum2012a]. 
+@clarkEvaluationPercentileApproach2014 applied a similar percentile-based approach for Alaskan salmon stocks, where applicability of percentiles was categorized in into 3 tiers based on contrast in spawner abundances, harvest rate, and precision of escapement data. They tested the suitability of this tiered approach with theoretical, simulation, and meta-analysis methods using 76 stock-recruitment data sets from Alaska covering all 5 species of Pacific salmon. The goal of these tiers was to choose a Sustainable Escapement Goal (SEG; an upper and lower percentile) as a proxy for keeping escapement within a range that includes S\textsubscript{MSY} [@clarkEvaluationPercentileApproach2014]. Moving to British Columbia, @hilbornBritishColumbiaChum2012a adopted the percentile-based thresholds for evaluating the status of Inside South Coast Chum in BC for the purpose of certification with the Marine Stewardship Council [@hilbornBritishColumbiaChum2012a]. 
 
 
 One difference between application of percentile-approach in Alaska and BC is that in BC, spawners are aggregated across rivers within a CU while in Alaska this approach is applied to each river [@mckinleyReviewSalmonEscapement2020]. ISC chum includes 296 streams among the seven CUs, with 126 in Strait of Georgia alone. Aggregating over river systems within CUs ignores the distribution of spawning within the CU and may not capture the loss of some less productive sub-population components within the CU. Spawner abundance at the CU level may not be a good predictor of status of individual rivers compared to at the river scale. Spawner abundance at CU level may not be a good predictor of status of individual rivers compared to SEGs at the river scale, depending on the contrast in size between rivers and the correlation (or lack thereof) in escapement and/or productivity. This risk is especially relevant in this case study because the data is infilled assuming correlation in spawning escapement within CUs. This approach ignores possible portfolio effects, whereby stock aggregates gain stability from the asynchrony of their component rivers [@brennanShiftingHabitatMosaics2019; @davisEffectsVariabilitySynchrony2021; @mooreConservationRisksPortfolio2021].
@@ -292,11 +294,11 @@ An additional source of uncertainty stems from spawner time series that may incl
 <!--LW: Need to check with Pieter Van Will on how much or a risk this actually is based on amount of hatchery production for ISC chum and straying. Look at Lynch et al. 2020 report  http://publications.gc.ca/collections/collection_2021/mpo-dfo/Fs97-13-1319-eng.pdf as well--> 
 
 
-We showed that increasing the number of CUs included in proportion-based LRP status assessment gave a more pessimistic status. This is not surprising given the low correlation of CUs within this SMU; we do not expect CUs to be interchangeable. Therefore, it makes sense to use as much data as possible to represent variable dynamics within the CU, where those data are reliable For this SMU where the status of two data-limited CUs, Upper Knight and Bute Inlet, cannot be inferred from data-rich CUs (see Section \@ref(chum-context)) for this Case Study), omitting the data-limited CUs from analyses can result in either an SMU status that is data deficient or below the LRP depending on status of remaining data-rich CUs. When the status of at least one of the data-rich CUs is in the red zone, the proportion-based LRP of 100% of CUs above the red zone is considered breached. However, if the status of all data-rich CUs are above the red zone, the SMU is considered data deficient if status of data-limited CUs is unknown because it cannot be inferred. In our case, we could assess status based on trends for these data-limited CUs as applied in the Salmon Scanner. However, in other SMUs, there may be cases where data to estimate trends are not available.
+We showed that increasing the number of CUs included in proportion-based LRP status assessment gave a more pessimistic status. This is not surprising given the low correlation of CUs within this SMU; we do not expect CUs to be interchangeable. Therefore, it makes sense to use as much data as possible to represent variable dynamics within the CU, where those data are reliable. For this SMU where the status of two data-limited CUs, Upper Knight and Bute Inlet, cannot be inferred from data-rich CUs (see Section \@ref(chum-context)), omitting the data-limited CUs from analyses can result in either an SMU status that is data deficient or below the LRP depending on status of remaining data-rich CUs. When the status of at least one of the data-rich CUs is in the red zone, the proportion-based LRP of 100% of CUs above the red zone is considered breached. However, if the status of all data-rich CUs are above the red zone, the SMU is considered data deficient if status of data-limited CUs is unknown because it cannot be inferred. In our case, we could assess status based on trends for these data-limited CUs as applied in the Salmon Scanner. However, in other SMUs, there may be cases where data to estimate trends are not available.
 
 
 We were not able to estimate aggregate abundance logistic regression LRPs for ISC Chum due to poor model fits of the underlying data. The data were not suited to logistic regression, and aggregate abundance was not a good predictor of the status of component CUs. Abundance for two CUs was regularly two orders of magnitude larger than the smaller CUs (Figure \@ref(fig:chum-spawner-distribution)), and correlation in abundances between CUs was generally low (Figure \@ref(fig:chum-spawner-corr)). Thus, aggregate abundance can be high mainly due to high abundance CUs while low abundance CUs have red status, and the SMU is thus below the LRP. This pattern is exacerbated because the two most abundant CUs have the highest correlation in escapement with each other, and generally low correlation with the other CUs (Figure \@ref(fig:chum-spawner-corr)). This pattern is also the reason why SMU status can be below the LRP even as aggregate abundances increase (Figure \@ref(fig:chum-LRP-compare)). The large geographical range of the SMU, different numbers of populations within each CU, and variation in productivity, threats, and ecosystem conditions help explain these characteristics of the data.
 
 
-The CUs that were missing observations in some years and required CU-level infilling (Upper Knight and Bute Inlet) were not used in the aggregate abundance LRP analysis because the assumption that escapement is correlated between CUs ignores diversity between CUs and the potential for uncorrelated escapements.Unlike proportion-based LRPS, for aggregate abundance-based LRPs, we did not consider status based on the Salmon Scanner which that does not require infilling. It should also be noted that these two CUs do not represent a random subset of the seven CUs in the Inside South Coast Chum SMU due to their location, watershed characteristics, near-shore marine environment, threats, and environmental conditions (Section \@ref(chum-context)). 
+The CUs that were missing observations in some years and required CU-level infilling (Upper Knight and Bute Inlet) were not used in the aggregate abundance LRP analysis because the assumption that escapement is correlated between CUs ignores diversity between CUs and the potential for uncorrelated escapements. Unlike proportion-based LRPs, for aggregate abundance-based LRPs, we did not consider status based on the Salmon Scanner which that does not require infilling. It should also be noted that these two CUs do not represent a random subset of the seven CUs in the Inside South Coast Chum SMU due to their location, watershed characteristics, near-shore marine environment, threats, and environmental conditions (Section \@ref(chum-context)). 
 
