--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -9,6 +9,20 @@ output:
 
 ## CONTEXT {#chum-context}
 
+\begin{tcolorbox}[sharp corners, boxrule=0.2mm]
+\subsection*{Key Points:}
+
+\begin{itemize}
+
+\item The revised Fisheries Act includes new Fish Stocks provisions that introduced legal
+obligations to manage major fish stocks at levels necessary to promote sustainability,
+avoid limit reference points, and implement plans to rebuild stocks that have declined to,
+or below, a limit reference point, all while taking into account the biology of the fish and
+environmental conditions facing the stock.
+
+\end{itemize}
+
+\end{tcolorbox}
 
 The Inside South Coast Chum - Non-Fraser SMU (hereafter ISC Chum) includes seven CUs of Chum Salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island (Figure \@ref(fig:chum-map); @holtbyConservationUnitsPacific2007). This area includes deep fjords, glaciers, large rivers, and small coastal streams. Chum salmon CUs spawning in the Fraser River watershed are not included in this SMU. They have been categorized as a separate 'Inside South Coast Chum - Fraser' SMU. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fishery impacts and freshwater habitats. 
 
