--- a/caseStudyWP/index.Rmd
+++ b/caseStudyWP/index.Rmd
@@ -72,6 +72,7 @@ bibliography: bib/refs.bib
 header-includes:
   - \usepackage{amsmath}
   - \usepackage{graphics}
+  - \usepackage{tcolorbox}
 # - \usepackage{tikz}
 ---
 
